k8s/04-cors-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cors-middleware
  namespace: default
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - Content-Type
      - Authorization
    accessControlAllowOrigin: https://himatsumu.kirimaru.org
    accessControlAllowCredentials: true
