k8s/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: auth-container
        image: ghcr.io/himatsumu/auth_service:latest
        ports:
        - containerPort: 18080
